--- a/local.env
+++ b/local.env
@@ -4,7 +4,7 @@ MODE=development
 
 DB_DRIVER=mysql
 DB_NAME=blogspot
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=adol1122
