--- a/deployment/db_secret.yaml
+++ b/deployment/db_secret.yaml
@@ -5,12 +5,12 @@ metadata:
 type: Opaque
 stringData:   # We dont need to worry about converting to base64
  
-  DB_USERNAME: mawan
+  DB_USERNAME: root
   APP_PORT: "8081"
   DB_ADDRESS: mysql-service.default.svc.cluster.local
   DB_DRIVER: mysql
   API_SECRET: 98hbun98h 
-  DB_USER: root
+  # DB_USER: root
   DB_PASSWORD: adol1122
   DB_NAME: rogerdev_blogspot_db
   DB_PORT: "8082"
